[package]
name = "xbee"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
xbee-derive = { path = "../xbee-derive" }
atsam3x8e = { path = "../atsam3x8e", features = ["rt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
heapless = { version = "0.7", features = ["serde"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
bitflags = "1.3"

[build-dependencies]

[profile.release]
codegen-units = 1
debug = true
lto = true
